--- a/frontend/src/components/UserProfile/ReservationItem.scss
+++ b/frontend/src/components/UserProfile/ReservationItem.scss
@@ -5,6 +5,7 @@
     width: 60vw;
     background-color: aliceblue;
     display: flex;
+    align-items: center;
 
     .left-side-res{
         width: 40%;
