--- a/frontend/src/components/UserProfile/ReservationItem.scss
+++ b/frontend/src/components/UserProfile/ReservationItem.scss
@@ -1,3 +1,10 @@
+.spots-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
 .reservation-card {
     border-radius: 5px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -36,6 +43,11 @@
                     font-weight: 500;
                 }
             }
+        }
+
+        img {
+            width: 20px;
+            height: 20px;
         }
     }
     
