contact us done

--- a/frontend/src/components/ContactUs/ContactUs.scss
+++ b/frontend/src/components/ContactUs/ContactUs.scss
@@ -1,6 +1,22 @@
 // body{margin-top:20px;
 //     background:#eee;
 //     }
+
+    .container {
+        margin-top: 150px;
+
+    }
+
+    .section_heading {
+        h3 {
+            color: #070a57;
+            font-size: 55px;
+        }
+        p {
+            margin-bottom: 30px;    
+        }
+    }
+
     .single_advisor_profile {
         position: relative;
         margin-bottom: 50px;
