Refine error message and add style to the "Here"
When a user searches for a spot or lands on the index page from a
location that doesn't match any spots in the database with a zip code,
the system should display an error message along with a button that
redirects them to the default search area, which has pre-populated
spots in the 10028 zip code.

--- a/frontend/src/components/SpotsIndex/SpotsIndex.scss
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.scss
@@ -61,6 +61,20 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+
+    .no-spots-for-zip {
+        margin-top: 100px;
+        min-width: 500px;
+
+        .btn-no-spots-for-zip {
+            border: none;
+            text-decoration: underline;
+            color: #0c1059;
+            font-weight: 700;
+            background: none;
+        }
+
+    }
 }
 
 .rent {
