--- a/frontend/src/components/ShowPage/ShowPage.scss
+++ b/frontend/src/components/ShowPage/ShowPage.scss
@@ -38,6 +38,10 @@
 .map {
     border-radius: 30px;
 }
+
+.list-group {
+    background-color: #efe9e1;
+}
 .show-infos{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -59,10 +63,14 @@
 .show-rightside {
     padding: 0 20px;
     width: 100%;
-    border-left: 1px solid black;
+    // border-left: 1px solid black;
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    h3 {
+        color: #0C1059
+    }
 
 }
 
@@ -71,7 +79,7 @@
 }
 
 .show-address{
-    color:#C37F19;
+    color:#F28F16;
 }
 
 .show-reviews{
@@ -83,6 +91,7 @@
 .reservation {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     gap: 10px;
+    margin-top: 50px;
 }
