--- a/frontend/src/components/SpotsIndex/SpotsIndex.scss
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.scss
@@ -1,12 +1,12 @@
 .background {
     background-color: #efe9e1;
     content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    /* height: calc(100vh + 100px); */
-    z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	/* height: calc(100vh + 100px); */
+	z-index: -1;
 }
 
 .map-wrapper {
@@ -15,19 +15,20 @@
     padding: 10px;
     gap: 10px;
 }
-
 .left-map {
     width: 100%;
     height: 80vh;
-    border-radius: 20px !important;
-    overflow: hidden;
+	border-radius: 20px !important;
+	overflow: hidden;
+    /* margin-top: 65px;
+    margin-bottom: 100px; */
     border: 2px solid #a9bf99 !important;
 }
 
 .search-bar {
     height: 60px;
-    margin-top: 65px;
-    margin-bottom: 10px;
+    margin-top: 65px ;
+    margin-bottom: 10px ;
     min-width: 500px !important;
 
     .input-group {
@@ -53,7 +54,6 @@
 
 
 .index-side {
-    background-color: red;
     margin-top: 67px;
     max-height: 93vh;
     min-width: 500px !important;
@@ -82,8 +82,7 @@
     font-size: 32px;
     color: #0c1059;
 }
-
-.card {
+.card{
     height: 200px !important;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 95%;
