--- a/frontend/src/components/Reservation/Reservation.scss
+++ b/frontend/src/components/Reservation/Reservation.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 500px;
-    height: 100%;
     gap: 10px;
-    border: 1px groove rgb(202, 202, 202);
+    // border: 1px groove rgb(202, 202, 202);
+box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
     padding: 10px;
     border-radius: 5px;
 
@@ -79,7 +79,6 @@
 
             &:hover {
                 background-color: #a9bf99;
-
             }
         }
     }
