--- a/frontend/src/components/Reservation/Reservation.scss
+++ b/frontend/src/components/Reservation/Reservation.scss
@@ -1,7 +1,7 @@
 .carousel_wrapper {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    align-items: center;
     gap: 10px;
     padding: 10px;
     border-radius: 5px;
@@ -38,6 +38,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        min-width: 400px;
 
         .reservation-calc {
             width: 80%;
