--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,15 @@
+.indexPage {
+    background-color: #efe9e1;
+}
+
+.createSpotPage {
+    background-color: #e0f2c4;
+}
+
+.profilePage {
+    background-color: beige;
+}
+
 .logo {
     height: 50px;
     width: 200px;
@@ -6,7 +18,6 @@
 .navbar-nav{
     display: flex;
     width: 100%;
-
 }
 
 .box-nav {
