--- a/frontend/src/components/SpotsIndex/SpotsIndex.scss
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.scss
@@ -1,11 +1,10 @@
 .background {
     background-color: #efe9e1;
     content: "";
-	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	/* height: calc(100vh + 100px); */
+	width: 100vw;
+    height: 100vh;
 	z-index: -1;
 }
 
@@ -14,15 +13,14 @@
     grid-template-columns: 2fr 1fr;
     padding: 10px;
     gap: 10px;
-}
-.left-map {
-    width: 100%;
-    height: 80vh;
-	border-radius: 20px !important;
-	overflow: hidden;
-    /* margin-top: 65px;
-    margin-bottom: 100px; */
-    border: 2px solid #a9bf99 !important;
+
+    .left-map {
+        width: 100%;
+        height: 90vh;
+        border-radius: 20px !important;
+        overflow: hidden;
+        border: 2px solid #a9bf99 !important;
+    }
 }
 
 .search-bar {
