--- a/frontend/src/components/UserProfile/ReservationItem.scss
+++ b/frontend/src/components/UserProfile/ReservationItem.scss
@@ -14,6 +14,11 @@
     display: flex;
     align-items: center;
 
+    &:hover {
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 4px 16px 0px;
+        background-color: rgb(230, 238, 247);
+    }
+
     .left-side-res{
         width: 40%;
         display: flex;
