--- a/frontend/src/components/UserProfile/UserProfile.scss
+++ b/frontend/src/components/UserProfile/UserProfile.scss
@@ -2,7 +2,7 @@
     background-color: beige;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 .profile-image {
