--- a/frontend/src/components/ShowPage/ShowPage.scss
+++ b/frontend/src/components/ShowPage/ShowPage.scss
@@ -16,26 +16,40 @@
     padding: 10px;
     height: 100%;
 
+    .show-leftside {
+        padding: 0 20px;
+        display: grid;
+        grid-template-rows: 1fr 1.5fr;
+        width: 100%;
+        height: 100% !important;
+        overflow: hidden;
+        gap: 30px;
+
+        .show-images {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 10px;
+            justify-content: center;
+
+            img {
+                width: 90%;
+                height: 90%;
+                border-radius: 30px;
+            }
+        }
+
+
+        .map-container {
+            height: 100%;
+            width: 95%;
+            overflow: hidden;
+            border-radius: 20px !important;
+        }
+
+    }
 }
 
-.show-images {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    justify-content: center;
-}
-
-.show-images img {
-    width: 90%;
-    height: 90%;
-    border-radius: 30px;
-}
-
-.map-container {
-    height: 100vh;
-    border-radius: 20px;
-}
 
 .list-group {
 
@@ -82,16 +96,6 @@
      font-size: 20px;
 }
 
-.show-leftside {
-    padding: 0 20px;
-    display: grid;
-    grid-template-rows: 1fr 1.5fr;
-    width: 100%;
-    height: 100% !important;
-    border-radius: 20px !important;
-    overflow: hidden;
-    gap: 30px;
-}
 
 .show-rightside {
     padding: 0 20px;
