Style: add disabled time and date fields

--- a/frontend/src/components/Reservation/Reservation.scss
+++ b/frontend/src/components/Reservation/Reservation.scss
@@ -54,6 +54,30 @@
             }
         }
 
+        .not-selected-yet {
+            display: flex;
+
+            .disable-date-text {
+                border: 1px solid #bdbdbd;
+                border-radius: 5px 0px 0px 5px;
+                padding: 10px 50px 10px 50px;
+
+                span {
+                    color: rgb(174, 174, 174);
+                }
+
+            }
+
+            .disable-time-text {
+                border: 1px solid #bdbdbd;
+                border-radius: 0px 5px 5px 0px;
+                padding: 10px 23px 10px 23px;
+                background-color: transparent;
+                color: rgb(174, 174, 174);
+                pointer-events: none;
+            }
+        }
+
         .reservation-calc {
             width: 80%;
             margin-top: 10px;
