Style: Reservation calendar buttons centering

--- a/frontend/src/components/Reservation/CarouselButton.scss
+++ b/frontend/src/components/Reservation/CarouselButton.scss
@@ -13,10 +13,11 @@
     border: 1px solid rgb(167 166 171);
     color: rgb(42 42 50);
     border-radius: 24%;
+    padding-top: 4px;
 
 
     .btn__icon {
-        font-size: 25px;
+        font-size: 23px;
     }
 
     &:hover {
