--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -44,6 +44,7 @@
                 margin-top: 5px;
                 border: 1px rgb(202, 202, 202) solid;
                 border-radius: 5px;
+                padding-left: 10px;
             }
 
             .addressInput {
@@ -52,6 +53,7 @@
                 margin-top: 5px;
                 border: 1px rgb(202, 202, 202) solid;
                 border-radius: 5px;
+                padding-left: 10px;
             }
 
             .createSpotCity {
@@ -60,6 +62,7 @@
                 margin-top: 5px;
                 border: 1px rgb(202, 202, 202) solid;
                 border-radius: 5px;
+                padding-left: 10px;
             }
 
             .createSpotZip {
@@ -68,6 +71,7 @@
                 margin-top: 5px;
                 border: 1px rgb(202, 202, 202) solid;
                 border-radius: 5px;
+                padding-left: 10px;
             }
 
 
@@ -80,6 +84,7 @@
                 border-radius: 5px;
                 margin-top: 5px;
                 height: 45px;
+                padding-left: 10px;
             }
 
             .statesList {
